<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Launcher3</string>
    <string name="folder_name"></string>
    <string name="work_folder_name">Work</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="activity_not_available">App isn\'t available</string>
    <string name="safemode_shortcut_error">Downloaded app disabled in Safe mode</string>
    <string name="safemode_widget_error">Widgets disabled in Safe mode</string>
    <string name="shortcut_not_available">Shortcut isn\'t available</string>
    <string name="home_screen">Home screen</string>
    <string name="custom_actions">Custom actions</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="long_accessible_way_to_add">Double-tap &amp; hold to pick up a widget or use custom actions.</string>
    <string name="widget_dims_format">%1$d \u00d7 %2$d</string>
    <string name="widget_accessible_dims_format">%1$d wide by %2$d high</string>
    <string name="add_item_request_drag_hint">Touch &amp; hold to place manually</string>
    <string name="place_automatically">Add automatically</string>
    <string name="all_apps_search_bar_hint">Search apps</string>
    <string name="all_apps_loading_message">Loading apps&#8230;</string>
    <string name="all_apps_no_search_results">No apps found matching \"<xliff:g id="query" example="Android">%1$s</xliff:g>\"</string>
    <string name="all_apps_search_market_message">Search for more apps</string>
    <string name="notifications_header">Notifications</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space">No more room in the Favorites tray</string>
    <string name="all_apps_button_label">Apps list</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="remove_drop_target_label">Remove</string>
    <string name="uninstall_drop_target_label">Uninstall</string>
    <string name="app_info_drop_target_label">App Info</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and
        shortcuts in Home.</string>
    <string name="msg_no_phone_permission"><xliff:g id="app_name" example="Launcher3">%1$s</xliff:g> is not allowed to make phone calls</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="gadget_setup_text">Setup</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="disabled_app_label">Disabled <xliff:g id="app_name" example="Messenger">%1$s</xliff:g></string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="workspace_new_page">New Home screen page</string>
    <string name="folder_opened">Folder opened, <xliff:g id="width" example="5">%1$d</xliff:g> by <xliff:g id="height" example="3">%2$d</xliff:g></string>
    <string name="folder_tap_to_close">Tap to close folder</string>
    <string name="folder_tap_to_rename">Tap to save rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="folder_name_format">Folder: <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="widget_button_text">Widgets</string>
    <string name="wallpaper_button_text">Wallpapers</string>
    <string name="settings_button_text">Home settings</string>
    <string name="msg_disabled_by_admin">Disabled by your admin</string>
    <string name="accessibility_action_overview">Overview</string>
    <string name="allow_rotation_title">Home Screen Rotation</string>
    <string name="allow_rotation_desc">When phone is rotated</string>
    <string name="allow_rotation_blocked_desc">Current Display setting doesn\'t permit rotation</string>
    <string name="icon_badging_title">Notification Dots</string>
    <string name="icon_badging_desc_on">On</string>
    <string name="icon_badging_desc_off">Off</string>
    <string name="title_missing_notification_access">Notification access needed</string>
    <string name="msg_missing_notification_access">To show Notification Dots, turn on app notifications for <xliff:g id="name" example="My App">%1$s</xliff:g></string>
    <string name="title_change_settings">Change settings</string>
    <string name="auto_add_shortcuts_label">Add Icon to Home Screen</string>
    <string name="auto_add_shortcuts_description">For new apps</string>
    <string name="icon_shape_override_label">Icon Shape</string>
    <string name="icon_shape_system_default">Use system default</string>
    <string name="icon_shape_square">Square</string>
    <string name="icon_shape_squircle">Squircle</string>
    <string name="icon_shape_circle">Circle</string>
    <string name="icon_shape_teardrop">Teardrop</string>
    <string name="icon_shape_rounded_square">Rounded square</string>
    <string name="icon_shape_super_ellipse">Super ellipse</string>
    <string name="icon_shape_override_progress">Applying icon shape changes</string>
    <string name="package_state_unknown">Unknown</string>
    <string name="abandoned_clean_this">Remove</string>
    <string name="abandoned_search">Search</string>
    <string name="abandoned_promises_title">This app is not installed</string>
    <string name="abandoned_promise_explanation">The app for this icon isn\'t installed.
        You can remove it, or search for the app and install it manually.
    </string>
    <string name="app_downloading_title"><xliff:g id="name" example="Messenger">%1$s</xliff:g> downloading, <xliff:g id="progress" example="30%">%2$s</xliff:g> complete</string>
    <string name="app_waiting_download_title"><xliff:g id="name" example="Messenger">%1$s</xliff:g> waiting to install</string>
    <string name="widgets_bottom_sheet_title"><xliff:g id="name" example="Messenger">%1$s</xliff:g> widgets</string>
    <string name="action_add_to_workspace">Add to Home screen</string>
    <string name="action_move_here">Move item here</string>
    <string name="item_added_to_workspace">Item added to Home screen</string>
    <string name="item_removed">Item removed</string>
    <string name="action_move">Move item</string>
    <string name="move_to_empty_cell">Move to row <xliff:g id="number" example="1">%1$s</xliff:g> column <xliff:g id="number" example="1">%2$s</xliff:g></string>
    <string name="move_to_position">Move to position <xliff:g id="number" example="1">%1$s</xliff:g></string>
    <string name="move_to_hotseat_position">Move to favorites position <xliff:g id="number" example="1">%1$s</xliff:g></string>
    <string name="item_moved">Item moved</string>
    <string name="smartspace_time">Add Clock</string>
    <string name="pref_icon_pack">Icon Pack</string>
    <string name="smartspace_preferences_in_settings">\"At a Glance\" Widget</string>
    <string name="smartspace_customize_in_settings">Customize Widget</string>
    <string name="smartspace_disable">Disable \"At a Glance\" Widget</string>
    <string name="smartspace_preferences_in_settings_desc">Configure the widget at the top of the Home screen what it should display</string>
    <string name="title_show_google_app">%1$s</string>
    <string name="pref_show_google_now_summary">@string/msg_minus_one_on_left</string>
    <string name="about">About</string>
    <string name="title_app_suggestions">App Suggestions</string>
    <string name="summary_app_suggestions">At the top of the app drawer</string>
    <string name="custom_theme">Theme</string>
    <string name="custom_theme_summary">Customize the theme and icons</string>
    <string name="hide_app">Hide Apps</string>
    <string name="hide_app_sum">Hide apps from the app drawer</string>
    <string name="hide_widgets_too">Hide Widgets</string>
    <string name="hide_widgets_too_sum">Dont\s show widgets of hidden apps</string>
    <string name="custom_dockbar">Dock</string>
    <string name="custom_dockbar_summary">Customize the dock</string>
    <string name="num_hotseat_icons_pref_title">Number of Dock Icons</string>
    <string name="force_mic">Show Microphone</string>
    <string name="force_colour_logo">Colored Google Search Bar Logo</string>
    <string name="transparentqsb">Transparency on Search Bar</string>
    <string name="hotseatShowArrow">Show Arrow</string>
    <string name="hotseat_show_page_indicator">Show Page Indicator</string>
    <string name="gradient_size">Gradient Size</string>
    <string name="remove_gradient">Disable Dock Gradient</string>
    <string name="googleinappmenu">New Google Search Bar</string>
    <string name="num_rows">Number of Rows</string>
    <string name="num_cols">Number of Columns</string>
    <string name="thanks">Thanks to</string>
    <string name="sum_thanks">Amir Zaidi (amirzaidi), Lawnchair team (deletescape, paphonb, fonix232, divadsn, Rawi666), ezio84, arco, jrizzoli, nebkat, xyyx, Mazda--, chauek, Thecrazyskull, stavros3006, yukuku, hundeva</string>
    <string name="date">Build Date</string>
    <string name="sum_aboutapp">About the app, version information, credits</string>
    <string name="about_app_version_wtu">Version / whataudoinghere GitHub</string>
    <string name="url_wtu_git">https://github.com/whataudoinghere/Launcher3</string>
    <string name="reboot">Restart</string>
    <string name="reboot_sum">Restart to re-apply settings</string>
    <string name="custom_allapp">All Apps</string>
    <string name="custom_allapp_summary">Customize your app drawer</string>
    <string name="num_colsallapp">Extra Column in App Drawer</string>
    <string name="smallallaps">Small Search Bar</string>
    <string name="custom_ico">Icons</string>
    <string name="smallfont">Smaller Font for Labels</string>
    <string name="icon_size">Icon Size</string>
    <string name="custom_hs">Home Screen</string>
    <string name="custom_hs_summary">Customize your Home screen and \"At a Glance\" widget</string>
    <string name="diabledgemargin">Disable</string>
    <string name="diabledgemargin_sum">Horizontal Screen Padding</string>
    <string name="settings_edit_allow_title">Allow Home Screen Editing</string>
    <string name="settings_edit_allow_summary_on">Icons and widgets can be added, removed and moved on the Home screen</string>
    <string name="settings_edit_allow_summary_off">Icons and widgets can\'t be added, removed and moved on the Home screen</string>
    <string name="desktop_show_labels">Icon Labels on Home Screen</string>
    <string name="drawer_show_labels">Icon Labels in Drawer</string>
    <string name="custom_folders">Folders</string>
    <string name="custom_folders_summary">Customize your folders</string>
    <string name="folder_show_labels">Icon Labels in Folders</string>
    <string name="date_format">Date Format</string>
    <string name="use_custom_label_color">Custom Label Color</string>
    <string name="use_qsb_label_color">Custom Search Bar Color</string>
    <string name="custom_label_color">Label Color</string>
    <string name="custom_qsb_color">Search Bar Color</string>
    <string name="behavior_pref_title">Behavior</string>
    <string name="behavior_pref_summary">Change the UI behavior</string>
    <string name="icons_pack_name">Icon Pack</string>
</resources>